@@ -1,0 +1,5 @@
+# localtion of the mip6d config file
+MIP6D_CONF="/etc/mip6d.conf"
+
+# additional args to pass to mip6d
+MIP6D_ARGS=""
